// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with > 1 expense 1`] = `
<div>
  <h1>
    Viewing 13 expenses totalling $343,434,343.43
  </h1>
</div>
`;

exports[`should correctly render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $1,212.12
  </h1>
</div>
`;
